# games-dub

./: .gitignore  Cargo.toml  caption1.txt  caption2.txt  caption3.txt  requirements.txt  speaker.bat  speaker.py
src/: cache.rs  main.rs  process.rs  read_camption.rs  tts.rs
src/games/: baldurs_game_3.rs  game_interface.rs  mod.rs  red_dead_2.rs  select_game.rs  starfield.rs
