[package]
name = "games-dub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["ntdef", "winnt", "minwindef", "processthreadsapi", "memoryapi", "errhandlingapi", "psapi"] }
process_list = "0.2.1"